--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito.kotlin</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
